<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/employer_avatar"
            android:layout_marginTop="40dp"
            android:src="@drawable/employer"
            android:layout_width="96dp"
            android:layout_height="96dp" />

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/employer_name"
            android:textSize="24sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Ivanov Ivan" />

        <TextView
            android:id="@+id/employer_phone"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="+7 (928) 123-45-67" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/get_work"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#cccccc" />

        <RelativeLayout
            android:id="@+id/deals_button"
            android:clickable="true"
            android:focusable="true"
            android:background="@android:color/white"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_height="48dp">

            <TextView
                android:text="@string/deals"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:tint="@color/colorSecondary"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_width="24dp"
                android:layout_height="24dp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#cccccc" />


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/Account"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#cccccc" />

        <RelativeLayout
            android:id="@+id/payment_tool_button"
            android:clickable="true"
            android:focusable="true"
            android:background="@android:color/white"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_height="48dp">

            <TextView
                android:text="@string/payment_tools"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:tint="@color/colorSecondary"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_width="24dp"
                android:layout_height="24dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/refunds_button"
            android:clickable="true"
            android:focusable="true"
            android:background="@android:color/white"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_height="48dp">

            <TextView
                android:text="@string/refunds"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:tint="@color/colorSecondary"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_width="24dp"
                android:layout_height="24dp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#cccccc" />

    </LinearLayout>

</LinearLayout>